# QtBuilder

./: LICENSE  README.md  dockerfile
.github/workflows/: docker-publish.yml
Test/: CMakeLists.txt  Main.cpp  Main.qml
